@@ -3,6 +3,8 @@
 	* gnus-html.el (gnus-html-wash-tags): Don't show images that are really
 	small. They're probably tracking images.
 	(gnus-html-wash-tags): Remove all <pre_int> place holders.
+	(gnus-html-rescale-image): Yet another try at getting the image sizing
+	right.
 
 	* nntp.el (nntp-request-set-mark): Refuse to do marks if
 	nntp-marks-file-name is nil.
